syntax = "proto3";

package github.com.eivorobuchek.messenger.auth_service;

option go_package = "auth_service/pkg/api/auth;auth";

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}